# Phoenix

./: .gitignore  CLAUDE.md  README.md
.claude/skills/flash/: SKILL.md
.claude/skills/flash-radio/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/timing-measurement/: SKILL.md
.claude/skills/transmit-test/: SKILL.md
.github/workflows/: compile.yml
code/: Contributors.txt
code/core_mods/: usb_audio.cpp  usb_audio.h
code/docs/: DFE_window_panes.drawio  DMR.md  DrawDisplay_Timing_Baseline.md  DrawDisplay_baseline_capture.json  DrawDisplay_phase1_capture.json  window_panes.drawio
code/docs/HAL_diagrams/: LPF_board_api.drawio  RF_board_api.drawio  T41_V12_board_api.drawio
code/src/BoardTest/TestDualClock/: CLAUDE.md  SDT.h  TestDualClock.ino
code/src/BoardTest/TestRFBoard/: TestRFBoard.ino
code/src/PhoenixSketch/: AD7991.cpp  AmbeDvsi.cpp  AmbeDvsi.h  AudioIO.cpp  BPFBoard.cpp  BPFBoard.h  BuildInfo.h  CAT.cpp  CAT.h  CWProcessing.cpp  CWProcessing.h  CompilerOptionsCheck.h  Config.h  Contributors.txt  DSP.cpp  DSP.h  DSP_CWProcessing.cpp  DSP_CWProcessing.h  DSP_FFT.cpp  DSP_FFT.h  DSP_FFT_stub.cpp  DSP_FIR.cpp  DSP_FT8.cpp  DSP_Noise.cpp  DSP_Noise.h  Display.h  DmrAudioOut.cpp  DmrAudioOut.h  DmrFraming.cpp  DmrFraming.h  DmrModem.cpp  DmrModem.h  DmrTxAudio.cpp  DmrTxAudio.h  FFT.cpp  FFT.h  FrontPanel.cpp  FrontPanel.h  FrontPanel_Rotary.cpp  FrontPanel_Rotary.h  (+71 more)
code/test/: Adafruit_I2CDevice_mock.cpp  Adafruit_MCP23X17.h  Arduino.h  ArduinoJson.cpp  ArduinoJson.h  Arduino_mock.cpp  AudioIO_mock.cpp  AudioIO_mock.h  BPFBoard_test.cpp  CAT_test.cpp  CMakeLists.txt  Calibration_test.cpp  DSP_FFT_stub_test.cpp  DisplaySimulator_main.cpp  Display_test.cpp  FrontPanel_mock.cpp  FrontPanel_test.cpp  LPFBoard_test.cpp  LittleFS_mock.cpp  LittleFS_mock.h  Loop_test.cpp  ModeSm_test.cpp  NoiseReduction_test.cpp  OpenAudio_ArduinoLibrary.h  OpenAudio_ArduinoLibrary_mock.cpp  PowerCalibration_test.cpp  RA8875.h  RA8875_SDL.cpp  RA8875_mock.cpp  README  README.md  RFBoard_test.cpp  RFHardwareSM_test.cpp  RadioSimulator_main.cpp  Radio_test.cpp  SignalProcessing_mock.cpp  SignalProcessing_mock.h  SignalProcessing_test.cpp  TimeLib.h  TransmitChain_test.cpp  (+12 more)
images/: state_machine_architecture.drawio
testing/: analyze_receive_chain_on_main_board.ipynb  main_board_audio_test.dwf3work
testing/.ipynb_checkpoints/: analyze_receive_chain_on_main_board-checkpoint.ipynb  dummy_load_measurements-checkpoint.ipynb  make_two_tone-checkpoint.ipynb
wiki/: .gitignore  CLAUDE.md  index.md  log.md
wiki/firmware/: .gitkeep  audio-io.md  built-in-test.md  calibration-state-machines.md  cat-control.md  code-heritage.md  cw-processing.md  display-subsystem.md  dsp-chain.md  filter-boards.md  front-panel.md  hardware-state-machine.md  main-loop.md  mode-state-machine.md  overview.md  persistent-config.md  rapid-tune-mute-freeze.md  real-time-constraints.md  rf-board.md  spectrum-refresh-floor.md  state-machine-architecture.md  tune-frequency-control.md  ui-state-machine.md
wiki/hardware/: filter-board-electronics.md  hardware-platform.md  i2c-bus-map.md  rf-board-electronics.md
wiki/raw/: .gitkeep  K9HZ_100W_11band_LPF-Control.kicad_sch  log.md
wiki/roadmap/: .gitkeep  development-backlog.md  documentation-todos.md  manual-notch.md  openaudio-library.md  transmit-spectrum.md  usb-audio.md
wiki/sources/: .gitkeep  t41-ep-schematics.md
wiki/theory/: .gitkeep  agc-design.md  audio-equalizer.md  fast-convolution-filtering.md  iq-imbalance-correction.md  iq-quadrature-sampling.md  multirate-decimation.md  noise-reduction.md  ssb-phasing-method.md  synchronous-am-detection.md  theory-overview.md  tx-carrier-null.md  zoom-fft.md
